# Lexvi

./: .gitignore  CMakeLists.txt  Lexvi.sln  README.md  build.sh  dump.txt  getCodeSize.sh  link.ld  vboxAttach.sh
Lexvi/: Lexvi.vcxproj  Lexvi.vcxproj.filters
Lexvi/src/: build.bat
Lexvi/src/Boot/: boot.asm
Lexvi/src/Kernel/: kernal.cpp
include/asm/: boot-config.nasm  instructions.hpp
include/kernel/: kernel-config.hpp  kernel.hpp
include/kernel/acpi/: hpet.hpp  rsdp.hpp  sdt.hpp
include/kernel/console/: console.hpp
include/kernel/console/fonts/: font8*8_basic.h
include/kernel/console/tui/: drawable.hpp  outline.hpp  rectangle.hpp  tui.hpp  window.hpp
include/kernel/error/: error.hpp
include/kernel/gdt/: gdt.hpp
include/kernel/interrupt/: idt.hpp  interruptFrame.hpp
include/kernel/io/: console.hpp
include/kernel/keyboard/: keyboard.hpp
include/kernel/memory/: memory-unit.hpp  memory-window.hpp  pmm.hpp
include/kernel/memory/internals/: memory-map.hpp  pmm.hpp  vmm.hpp
include/kernel/pic/: pic.hpp
include/kernel/syscall/: syscall.hpp
include/kernel/time/: time.hpp
include/kernel/utils/: math.hpp  memory.hpp
link/: kernelEntry.ld  kernelMain.ld
planning/: kernelBootSequence.txt
scripts/: build.sh  buildAndRun.sh  run.sh  vboxAttach.sh  windows-flashUSB.sh
src/: boot-stage1.nasm  boot-stage2.nasm  boot.nasm
src/boot/: boot-stage1.nasm  boot-stage2.nasm
src/kernel/: kernel-entry.cpp  kernel-main.cpp  kernel.cpp  kernelMain-entry.nasm
src/kernel/acpi/: hpet.cpp  rsdp.cpp  sdt.cpp
src/kernel/console/: console.cpp
src/kernel/console/tui/: window.cpp
src/kernel/error/: error.cpp
src/kernel/gdt/: gdt.cpp
src/kernel/interrupt/: idt.cpp  isr_stubs.nasm
src/kernel/io/: console.cpp
src/kernel/keyboard/: keyboard.cpp
src/kernel/memory/: pmm.cpp  vmm.cpp
src/kernel/pic/: pic.cpp
src/kernel/syscall/: syscall.cpp
src/kernel/time/: time.cpp
src/kernel/utils/: memory.cpp
